# light-aligner

./: .gitignore  README-zh.md  README.md  hlm1.py  id_aliyun.pub  index.md  lareload.py  mdx_de.py  needed-libs.txt  popup.py  pyproject.toml  quality-indicator.py  requirements.txt  run-package__main__.bat  run-pyinstaller-main.bat  run-python-m.ps1  startdict_de.py  temp.txt  userdict.txt  word-length-gen.py
.github/workflows/: build.yml
cachedir/joblib/light_aligner/light_scores/light_scores/: func_code.py
cachedir/joblib/light_aligner/light_scores/light_scores/43715fd1f3c6e6bbc82b2f97b6053647/: metadata.json  output.pkl
cachedir/joblib/light_aligner/light_scores/light_scores/f4ab8f12d45f7f9f134f0ca5ad146b77/: metadata.json  output.pkl
cachedir/joblib/light_aligner/light_scores/light_scores/feca086641667f0cf58461ac8b6b2471/: metadata.json  output.pkl
data/: 0test_-p.xlsx  0test_-p_01.xlsx  0test_-p_02.xlsx  0test_-s.xlsx  0test_-s_01.xlsx  0test_en.txt  0test_zh.txt  Gatsby-200lines-dual-s.xlsx  Gatsby-200lines-dual-s_01.xlsx  Gatsby-200lines-dual.txt  Gatsby-200lines-dual.xlsx  Gatsby-200lines-dual_01.xlsx  Gatsby-200lines-dual_02.xlsx  Gatsby-200lines-dual_03.xlsx  [其他语种] 【德语自修词典】（德汉全席大词典的升级版本）词条数77万 求高手重新排版.doc  fangfang-_-p.xlsx  fangfang-_-p_01.xlsx  fangfang-_-s.xlsx  fangfang-en.txt  fangfang-paras-parallel-sentences-out.tsv  fangfang-zh.txt  gatsby-dual-test2.txt  hlm-ch1-_-p.xlsx  hlm-ch1-_-p_01.xlsx  hlm-ch1-_-s.xlsx  hlm-ch1-en-userdict.txt  hlm-ch1-en.txt  hlm-ch1-zh.txt  lover-ch10_en.txt  lover-ch10_zh.txt  sternstunden12-de.txt  sternstunden12-zh.txt  test-hlm-ch1-_-p.xlsx  test-plist_to_slist.xlsx  test.xlsx  test_01.xlsx  test_02.xlsx  wu_ch3_-p.xlsx  wu_ch3_-p_01.xlsx  wu_ch3_-p_02.xlsx  (+11 more)
gui/: #aligner_ui.tcl##  aligner_ui.output  aligner_ui.py  aligner_ui.py.bak1  aligner_ui.tcl  aligner_ui_support.py  aligner_ui_support.py.bak1  page61.bat  tkaligner.py
light_aligner/: __init__.py  __main__.py  align_sents.py  bingmdx_tr.py  browse_filename.py  check_anchors.py  color_table_applymap.py  common_prefix.py  coverage_rate.py  find_aligned_pairs.py  gc_align.py  gen_filename.py  gen_row_alignment.py  gen_wlength_vec.py  get_filename.py  light_aligner.py  light_scores.py  load_paras.py  load_xlsx.py  minimath.py  msbing_c_e.msg  msbing_c_e_ehw.msgpk  msbing_c_e_hw.msgpk  msbing_c_e_hw.pkl  plist_to_slist.py  read_text.py  save_xlsx.py  single_or_dual.py  suggest_tolerance.py  suggest_udict_terms.py  text2udict.py  text_to_paras.py  text_to_plist.py  tkroot.py  userdict.txt  w4w_to_zh.py  zip_longest_middle.py
new-pages-site/: README.md
tests/: test_bingmdx_tr.py  test_light_aligner.py  test_light_scores.py  test_load_xlsx.py  test_plist_to_slist.py  test_text_to_plist.py  test_w4w_to_zh.py
